// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Concurrent Test Retries with flag retryImmediately retry immediately after failed test 1`] = `
"LOGGING RETRY ERRORS  retryable test 1
 RETRY 1 

    expect(received).toBeFalsy()

    Received: true

      15 |     expect(true).toBeTruthy();
      16 |   } else {
    > 17 |     expect(true).toBeFalsy();
         |                  ^
      18 |   }
      19 | });
      20 |

      at Object.toBeFalsy (__tests__/retryImmediatelyConcurrent.test.js:17:18)

 RETRY 2 

    expect(received).toBeFalsy()

    Received: true

      15 |     expect(true).toBeTruthy();
      16 |   } else {
    > 17 |     expect(true).toBeFalsy();
         |                  ^
      18 |   }
      19 | });
      20 |

      at Object.toBeFalsy (__tests__/retryImmediatelyConcurrent.test.js:17:18)

 LOGGING RETRY ERRORS  retryable test 2
 RETRY 1 

    expect(received).toBeFalsy()

    Received: true

      26 |     expect(true).toBeTruthy();
      27 |   } else {
    > 28 |     expect(true).toBeFalsy();
         |                  ^
      29 |   }
      30 | });
      31 | it.concurrent('truthy test', () => {

      at Object.toBeFalsy (__tests__/retryImmediatelyConcurrent.test.js:28:18)

 RETRY 2 

    expect(received).toBeFalsy()

    Received: true

      26 |     expect(true).toBeTruthy();
      27 |   } else {
    > 28 |     expect(true).toBeFalsy();
         |                  ^
      29 |   }
      30 | });
      31 | it.concurrent('truthy test', () => {

      at Object.toBeFalsy (__tests__/retryImmediatelyConcurrent.test.js:28:18)

PASS __tests__/retryImmediatelyConcurrent.test.js
  ✓ retryable test 1
  ✓ retryable test 2
  ✓ truthy test"
`;

exports[`Test Retries logs error(s) before retry 1`] = `
"LOGGING RETRY ERRORS  retryTimes set
 RETRY 1 

    expect(received).toBeFalsy()

    Received: true

      14 |     expect(true).toBeTruthy();
      15 |   } else {
    > 16 |     expect(true).toBeFalsy();
         |                  ^
      17 |   }
      18 | });
      19 |

      at Object.toBeFalsy (__tests__/logErrorsBeforeRetries.test.js:16:18)

 RETRY 2 

    expect(received).toBeFalsy()

    Received: true

      14 |     expect(true).toBeTruthy();
      15 |   } else {
    > 16 |     expect(true).toBeFalsy();
         |                  ^
      17 |   }
      18 | });
      19 |

      at Object.toBeFalsy (__tests__/logErrorsBeforeRetries.test.js:16:18)

PASS __tests__/logErrorsBeforeRetries.test.js
  ✓ retryTimes set"
`;

exports[`Test Retries logs the inner errors of an AggregateError before retry 1`] = `
"LOGGING RETRY ERRORS  retryTimes set
 RETRY 1 

    AggregateError: All promises were rejected

    Errors contained in AggregateError:
        ECONNREFUSED primary

           8 |
           9 | function connectToPrimary() {
        > 10 |   return Promise.reject(new Error('ECONNREFUSED primary'));
             |                         ^
          11 | }
          12 |
          13 | function connectToReplica() {

          at connectToPrimary (__tests__/logAggregateErrorsBeforeRetries.test.js:10:25)
          at Object.connectToPrimary (__tests__/logAggregateErrorsBeforeRetries.test.js:22:24)

        ETIMEDOUT replica

          12 |
          13 | function connectToReplica() {
        > 14 |   return Promise.reject(new Error('ETIMEDOUT replica'));
             |                         ^
          15 | }
          16 |
          17 | let i = 0;

          at connectToReplica (__tests__/logAggregateErrorsBeforeRetries.test.js:14:25)
          at Object.connectToReplica (__tests__/logAggregateErrorsBeforeRetries.test.js:22:44)

 RETRY 2 

    AggregateError: All promises were rejected

    Errors contained in AggregateError:
        ECONNREFUSED primary

           8 |
           9 | function connectToPrimary() {
        > 10 |   return Promise.reject(new Error('ECONNREFUSED primary'));
             |                         ^
          11 | }
          12 |
          13 | function connectToReplica() {

          at connectToPrimary (__tests__/logAggregateErrorsBeforeRetries.test.js:10:25)
          at Object.connectToPrimary (__tests__/logAggregateErrorsBeforeRetries.test.js:22:24)

        ETIMEDOUT replica

          12 |
          13 | function connectToReplica() {
        > 14 |   return Promise.reject(new Error('ETIMEDOUT replica'));
             |                         ^
          15 | }
          16 |
          17 | let i = 0;

          at connectToReplica (__tests__/logAggregateErrorsBeforeRetries.test.js:14:25)
          at Object.connectToReplica (__tests__/logAggregateErrorsBeforeRetries.test.js:22:44)

PASS __tests__/logAggregateErrorsBeforeRetries.test.js
  ✓ retryTimes set"
`;

exports[`Test Retries wait before retry 1`] = `
"LOGGING RETRY ERRORS  retryTimes set
 RETRY 1 

    expect(received).toBeFalsy()

    Received: true

      15 |     expect(Date.now() - startTimeInSeconds).toBeGreaterThan(200);
      16 |   } else {
    > 17 |     expect(true).toBeFalsy();
         |                  ^
      18 |   }
      19 | });
      20 |

      at Object.toBeFalsy (__tests__/waitBeforeRetry.test.js:17:18)

 RETRY 2 

    expect(received).toBeFalsy()

    Received: true

      15 |     expect(Date.now() - startTimeInSeconds).toBeGreaterThan(200);
      16 |   } else {
    > 17 |     expect(true).toBeFalsy();
         |                  ^
      18 |   }
      19 | });
      20 |

      at Object.toBeFalsy (__tests__/waitBeforeRetry.test.js:17:18)

PASS __tests__/waitBeforeRetry.test.js
  ✓ retryTimes set"
`;

exports[`Test Retries wait before retry with fake timers 1`] = `
"LOGGING RETRY ERRORS  retryTimes set with fake timers
 RETRY 1 

    expect(received).toBeFalsy()

    Received: true

      16 |     expect(Date.now() - startTimeInSeconds).toBeGreaterThan(200);
      17 |   } else {
    > 18 |     expect(true).toBeFalsy();
         |                  ^
      19 |     jest.runAllTimers();
      20 |   }
      21 | });

      at Object.toBeFalsy (__tests__/waitBeforeRetryFakeTimers.test.js:18:18)

 RETRY 2 

    expect(received).toBeFalsy()

    Received: true

      16 |     expect(Date.now() - startTimeInSeconds).toBeGreaterThan(200);
      17 |   } else {
    > 18 |     expect(true).toBeFalsy();
         |                  ^
      19 |     jest.runAllTimers();
      20 |   }
      21 | });

      at Object.toBeFalsy (__tests__/waitBeforeRetryFakeTimers.test.js:18:18)

PASS __tests__/waitBeforeRetryFakeTimers.test.js
  ✓ retryTimes set with fake timers"
`;

exports[`Test Retries with flag retryImmediately retry immediately after failed test 1`] = `
"LOGGING RETRY ERRORS  retryTimes set
 RETRY 1 

    expect(received).toBeFalsy()

    Received: true

      15 |     expect(true).toBeTruthy();
      16 |   } else {
    > 17 |     expect(true).toBeFalsy();
         |                  ^
      18 |   }
      19 | });
      20 | it('truthy test', () => {

      at Object.toBeFalsy (__tests__/retryImmediately.test.js:17:18)

 RETRY 2 

    expect(received).toBeFalsy()

    Received: true

      15 |     expect(true).toBeTruthy();
      16 |   } else {
    > 17 |     expect(true).toBeFalsy();
         |                  ^
      18 |   }
      19 | });
      20 | it('truthy test', () => {

      at Object.toBeFalsy (__tests__/retryImmediately.test.js:17:18)

PASS __tests__/retryImmediately.test.js
  ✓ retryTimes set
  ✓ truthy test"
`;
